--- a/templates/shop/view.html
+++ b/templates/shop/view.html
@@ -54,7 +54,7 @@
                         <input type="hidden" name="name_p" value="{{d.product_name}}">
                         <input type="hidden" name="price_p" value="{{d.price}}">
                         <input type="hidden" name="product_id" value="{{d.id}}">
-                        <th><button id="add_button" class="btn btn-dark" style="margin-right:60px;" type="submit">Add To Cart</button></th>
+                        <th><button id="add_button" class="btn btn-dark" type="submit">Add To Cart</button></th>
                         </form>
                         {% endif %}
                       {% endfor %}
