--- a/templates/shop/cart.html
+++ b/templates/shop/cart.html
@@ -13,7 +13,7 @@
                 <thead>
                   <tr>
                     <th><h5 id="text">Product Image</h5></th>
-                    <th><h5 id="text">Product Name/</h5></th>
+                    <th><h5 id="text">Product Name/ price/ qunatity</h5></th>
                     <th><h5 id="text">Delete</h5></th>
                   </tr>
                 </thead>
