--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -7,6 +7,7 @@
   <title>Login/Signup</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel = "icon" href = "https://icon2.cleanpng.com/20171220/hpe/shopping-cart-png-5a3a8fce7193f6.6430523815137873424652.jpg" type = "image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
