--- a/templates/shop/sellproduct.html
+++ b/templates/shop/sellproduct.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 
-
+{% if user.is_authenticated %}
 <style>
 .d-block{
     width:1200px;
@@ -49,7 +49,6 @@
 
 
 
-{% if user.is_authenticated %}
 
 <h4><u>Enter Your Product Details Below</u></h4>
 
@@ -135,6 +134,6 @@
 
 
 {% else %}
-<h1>you have not signup please go and sign up the page</h1>
+<center><h3>you have not signup please go and sign up the page</h3></center>
 {% endif %}
 {%endblock%}
