--- a/templates/shop/sellproduct.html
+++ b/templates/shop/sellproduct.html
@@ -134,6 +134,6 @@
 
 
 {% else %}
-<center><h3>you have not signup please go and sign up the page</h3></center>
+<center><h3>you hve not signup please go and sign up the page</h3></center>
 {% endif %}
 {%endblock%}
