--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -94,6 +94,7 @@
     <a href="/shop/productview/{{product.id}}"><h3 class="mt-0" id="name" style="margin-left:20px;">{{product.product_name}}</h3></a>
     <h5 class="card-title" style="margin-left:20px;">Price:-${{product.price}}</h5>
     <a href="/shop/order/{{product.id}}" class="btn btn-dark" style="margin-left:20px;">Buy Now</a>
+    {% if user.is_authenticated %}
     <form method="POST" action="/shop/">{% csrf_token %}
     <input type="hidden" name="cart_id" value="{{request.user.id}}">
     <input type="hidden" name="image_p" value="{{product.image}}">
@@ -137,7 +138,7 @@ width: 200px;
 
 
 </form>
-
+{% endif %}
 
   </div>
 </div>
