--- a/templates/shop/prodview.html
+++ b/templates/shop/prodview.html
@@ -32,6 +32,7 @@
   <div class="col-md-2 mb-md-0 p-md-3">
     <img src="/media/{{product.image}}" class="w-100" alt="...">
     <a href="/shop/order/{{product.id}}"><button class="btn btn-dark mx-3" id="butt">Buy Now</button></a>
+    {% if user.is_authenticated %}
     <form method="POST" action="/shop/search/">{% csrf_token %}
     <input type="hidden" name="cart_id" value="{{request.user.id}}">
     <input type="hidden" name="image_p" value="{{product.image}}">
@@ -73,6 +74,8 @@ width: 200px;
   </div>
 </div>
     </form>
+{% endif %}
+
   </div>
   <div class="col-md-6 p-4 ps-md-0">
     <p class="mt-0" style="font-size:25px;"><u>{{product.product_name}}</u></p>
