--- a/templates/shop/order.html
+++ b/templates/shop/order.html
@@ -34,7 +34,7 @@ width:60%;
 
 #order2{
     color:black;
-    background-color:#04FF00;
+    background-color:red;
 }
 
 #order1:hover{
@@ -44,7 +44,7 @@ width:60%;
 
 #order2:hover{
     color:white;
-    background-color:green;
+    background-color:black;
 }
 
 {% endblock %}
@@ -195,28 +195,9 @@ width:60%;
             </div>
 {% else %}
 
-<button type="button" class="btn btn-dark" data-toggle="modal" data-target="#order" id="order2">
-<b>Place Order</b>
+<button type="button" class="btn btn-danger" id="order2">
+<b>You Cannot Place Order</b>
 </button>
-
-<div class="modal fade" id="order" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">please sign up</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        PLEASE Signup
-      </div>
-      <div class="modal-footer">
-        <a type="button" href="/" class="btn btn-secondary" >Signup/Login</a>
-      </div>
-    </div>
-  </div>
-</div>
 {% endif %}
 
 
