--- a/templates/shop/vieworder.html
+++ b/templates/shop/vieworder.html
@@ -52,7 +52,7 @@ h4,h5,a{
 
 
 {%else%}
-<h2>Please sign in to see your Orders</h2>
-<a href="/" class="btn btn-danger">Sign in Here</a>
+<center><h2>Please sign in to see your Orders</h2>
+<a href="/" class="btn btn-danger">Sign in Here</a></center>
 {%endif%}
 {%endblock%}
