--- a/templates/shop/yourproduct.html
+++ b/templates/shop/yourproduct.html
@@ -44,7 +44,7 @@ h3,h4{
 
 
 {% else %}
-<h2>Please sign in to see your Selled Products</h2>
-<a href="/" class="btn btn-danger">Sign in Here</a>
+<center><h2>Please sign in to see your Selled Products</h2>
+<a href="/" class="btn btn-danger">Sign in Here</a></center>
 {% endif %}
 {%endblock%}
