--- a/templates/shop/order.html
+++ b/templates/shop/order.html
@@ -164,6 +164,10 @@ width:60%;
             <input type="hidden" id="inputorder" class="form-control" value="{{product.admin_id}}" readonly="readonly" name="admin_id">
         </div>
 
+        <div class="form-group col-md-7">
+            <input type="hidden" id="inputorder" class="form-control" value="Pending" name="order_status">
+        </div>
+
 
 
 
