--- a/templates/shop/orderrequest.html
+++ b/templates/shop/orderrequest.html
@@ -29,7 +29,7 @@
     <h4 id="text"><b><u>Email Address:-</u></b>{{order.email}}</h4>
     <h4 id="text"><b><u>Address:-</u></b>{{order.address1}},{{order.address2}}</h4>
     <h4 id="text"><b><u>Phone number:-</u></b>{{order.phone}}</h4>
-    <a id="text" href="/shop/moredetail/{{order.id}}"><button class="btn btn-secondary">More Details</button></a>
+    <a id="text" href="/shop/moredetail/{{order.id}}"><button class="btn btn-secondary">Manage Order</button></a>
   </div>
 </div>
 <br>
