--- a/templates/shop/basic.html
+++ b/templates/shop/basic.html
@@ -67,7 +67,7 @@
 
 {% if user.is_authenticated %}
       <li class="nav-item active">
-        <a class="nav-link active" href="/shop/contact">Contact U</a>
+        <a class="nav-link active" href="/shop/contact">Contact Us</a>
       </li>
 {% else %}
 <style>
