--- a/templates/shop/basic.html
+++ b/templates/shop/basic.html
@@ -83,7 +83,7 @@
 
 <li class="nav-item active">
 <button class="nav-link active" type="button" data-toggle="modal" data-target="#contact" id="button">
-  Contact Us
+  Contact U
 </button>
 </li>
 
