--- a/templates/shop/vieworder.html
+++ b/templates/shop/vieworder.html
@@ -50,7 +50,7 @@ h4,h5,a{
     <h4 class="mt-0">Product Name:-<b><u>{{order.product_name}}</u></b></h4>
     <h5>Price:-<b><u>{{order.product_price}}</u></b></h6>
     <a href="/shop/productview/{{order.product_id}}"><button class="btn btn-primary mx-3" >View Product</button></p></a>
-    <a href="destroy/{{order.id}}" onclick="return confirm('Are you sure you want to Cancel The Order?')"/><button class="btn btn-danger mx-3">Cancel Order</button></p></a>
+    <a href="destroy/{{order.id}}" onclick="return confirm('Are you sure you want to Cancel The Order?')"/><button class="btn btn-danger mx-3">Cancel Orde</button></p></a>
   </div>
 </div>
 <br>
