--- a/templates/shop/paymentstatus.html
+++ b/templates/shop/paymentstatus.html
@@ -1,6 +1,27 @@
-{% extends 'shop/basic.html' %}
-{% block title%} My Awesome Cart Tracker{% endblock %}
-{% block body %}
+<html>
+<head>
+	<title>My Awesome Cart Payment</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+</head>
+<body>
+ <nav class="navbar navbar-expand-lg navbar-dark bg-dark" width="100%">
+  <a class="navbar-brand" href="/shop" id="cart">&nbsp;My Awesome Cart</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+
+
+      <li class="nav-item active">
+        <a class="nav-link active" href="/shop">Home</a>
+      </li>
+    </div>
+
+  </nav>
 <style>
 body{
 	background-color: #B2FFF1;
@@ -9,7 +30,7 @@ body{
 
 <br>
         {% if response.RESPCODE == '01' %}
-        <center><h2>₹{{response.TXNAMOUNT}} Successfully Transferred of Order ID:-{{response.ORDERID}}</h2></center>
+        <center><h2>₹{{response.TXNAMOUNT}} Successfully Transferred {{response.ORDERID}}</h2></center>
 
         <center><h3>YOUR ORDER SUCCESSFULLY COMPLETED<br>
         Thank You!</h3></center>
@@ -21,10 +42,10 @@ body{
 
         <center><h3>YOUR ORDER GET FAILED!<br>Try Again!</h3>
         {% endif%}
-{% endblock %}
-{% block js %}
-<script>
+</body>
 
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 
-</script>
-{% endblock %}
+</html>
