--- a/templates/shop/paymentstatus.html
+++ b/templates/shop/paymentstatus.html
@@ -30,7 +30,7 @@ body{
 
 <br>
         {% if response.RESPCODE == '01' %}
-        <center><h2>₹{{response.TXNAMOUNT}} Successfully Transferred {{response.ORDERID}}</h2></center>
+        <center><h2>₹{{response.TXNAMOUNT}} Successfully Transferred of {{response.ORDERID}}</h2></center>
 
         <center><h3>YOUR ORDER SUCCESSFULLY COMPLETED<br>
         Thank You!</h3></center>
@@ -38,7 +38,7 @@ body{
 
 
         {% else %}
-        <center><h2>₹{{response.TXNAMOUNT}} Not Transferred of Order ID:-{{response.ORDERID}}</h2></center>
+        <center><h2>₹{{response.TXNAMOUNT}} Not Transferred of {{response.ORDERID}}</h2></center>
 
         <center><h3>YOUR ORDER GET FAILED!<br>Try Again!</h3>
         {% endif%}
