--- a/templates/shop/sellproduct.html
+++ b/templates/shop/sellproduct.html
@@ -28,7 +28,7 @@
 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://www.omnikick.com/wp-content/uploads/2016/09/Sell-Product.png" class="d-block w-100" alt="...">
+      <img src="https://www.doersempire.com/wp-content/uploads/2019/07/How-to-sell-online-Ways-to-sell-products-online-1280x640.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
       <img src="https://www.j2store.org/media/k2/items/cache/6b2d733e62f961aa8f8d2da1c77df197_XL.jpg" class="d-block w-100" alt="...">
