--- a/templates/shop/order.html
+++ b/templates/shop/order.html
@@ -137,16 +137,18 @@ width:60%;
             
 
 
-               <style>
-               #method{
-                width: 200px;
-               }
-               </style>
-                <label for="order_method">PLEASE CHOOSE METHOD OF PAYMENT</label><br>
-                 <select name="order_method" id="method">
+<style>
+#method{
+    width: 200px;
+}
+</style>
+               
+                <label for="order_method" >Choose Method of Payment</label><br>
+                 <select class="form-select" aria-label="Default select example" name="order_method" id="method">
+                    <option selected>Choose Method</option>
                     <option value="CASH ON DELIVERY">CASH ON DELIVERY</option>
                     <option value="CARD METHOD">CARD METHOD</option>
-                 </select><br><br>
+                 </select><br>
 
 
 
