--- a/templates/shop/paymentstatus.html
+++ b/templates/shop/paymentstatus.html
@@ -1,3 +1,4 @@
+{% load static %}
 <html>
 <head>
 	<title>My Awesome Cart Payment</title>
@@ -30,16 +31,36 @@
   </nav>
 <style>
 body{
-	background-color: #B2FFF1;
+  background-color:#F8F8F8;
+}
+.responsive {
+  max-width: 100%;
+  height: auto;
+  background-color: transparent;
+}
+
+#center{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top:0px;
+}
+@media screen and (min-width:900px){
+#center{
+    width:600px;
+    height:420px;
+  }
 }
 </style>
 
 <br>
         {% if response.RESPCODE == '01' %}
-        <center><h2>₹{{response.TXNAMOUNT}} Successfully Transferred of {{response.ORDERID}}</h2></center>
 
-        <center><h3>YOUR ORDER SUCCESSFULLY COMPLETED<br>
-        Thank You!</h3></center>
+        <center><img src="{% static "shop\ezgif.com-gif-maker (2).gif" %}" class="responsive" id="center"></center>
+
+        <div class="text">
+        <center><h2>₹{{response.TXNAMOUNT}} Successfully Transferred of {{response.ORDERID}}</h2><h3>Thank You!</h3></center>
+      </div>
 
 
 
