--- a/templates/shop/success2.html
+++ b/templates/shop/success2.html
@@ -1,10 +1,23 @@
 {% load static %}
-<img src="{% static "shop\ezgif.com-gif-maker (2).gif" %}" alt="Nature" class="responsive" id="center"/>
-<div class="text"><h1>Your Have Successfully Added a Product<br><button type="button" onclick="history.back()"><u>Go Back</u></button></h1></div>
+<html>
+<head>
+  <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel = "icon" href = "https://icon2.cleanpng.com/20171220/hpe/shopping-cart-png-5a3a8fce7193f6.6430523815137873424652.jpg" type = "image/x-icon">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <title>Successfully Delivered</title>
+</head>
+<body>
+
+  <img src="{% static "shop\ezgif.com-gif-maker (2).gif" %}" alt="Nature" class="responsive" id="center"/>
+<div class="text"><h1>Your Have Successfully Added a Product</h1></div>
 
 <style>
 body{
-	background-color:#F8F8F8;
+  background-color:#F8F8F8;
 }
 .responsive {
   max-width: 100%;
@@ -20,8 +33,21 @@ body{
 }
 
 div.text{
-	margin-top:-100px;
-  	text-align: center;
+  margin-top:-100px;
+  text-align: center;
 }
 
 </style>
+
+</body>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+</html>
