--- a/templates/shop/success1.html
+++ b/templates/shop/success1.html
@@ -12,8 +12,26 @@
 </head>
 <body>
 
-  <img src="{% static "shop\ezgif.com-gif-maker (2).gif" %}" alt="Nature" class="responsive" id="center"/>
-<div class="text"><h1>Your Have Successfully Submitted The Form</h1></div>
+
+ <nav class="navbar navbar-expand-lg navbar-dark bg-dark" width="100%">
+  <a class="navbar-brand" href="/shop" id="cart">&nbsp;My Awesome Cart</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+
+
+      <li class="nav-item active">
+        <a class="nav-link active" href="/shop">Home</a>
+      </li>
+    </div>
+
+  </nav>
+
 
 <style>
 body{
@@ -31,13 +49,16 @@ body{
   margin-right: auto;
   margin-top:0px;
 }
-
-div.text{
-  margin-top:-100px;
-  text-align: center;
+@media screen and (min-width:900px){
+#center{
+    width:600px;
+    height:420px;
+  }
 }
-
 </style>
+
+ <img src="{% static "shop\ezgif.com-gif-maker (2).gif" %}" alt="Nature" class="responsive" id="center"/>
+<center><h1>Your Have Successfully Submitted The Form</h1></center>
 
 </body>
 
