--- a/templates/shop/success.html
+++ b/templates/shop/success.html
@@ -58,7 +58,7 @@ body{
 </style>
 
  <img src="{% static "shop\ezgif.com-gif-maker (2).gif" %}" alt="Nature" class="responsive" id="center"/>
-<center><h1>Your Have Successfully Delivered a Product</h1></center>
+<center><h1>Your Have Successfully Ordered The Product</h1><h4>Thank You! For Purchasing</h4></center>
 
 </body>
 
