--- a/templates/shop/paymentstatus.html
+++ b/templates/shop/paymentstatus.html
@@ -59,7 +59,7 @@ body{
         <center><img src="{% static "shop\ezgif.com-gif-maker (2).gif" %}" class="responsive" id="center"></center>
 
         <div class="text">
-        <center><h2>You have Successfully Ordered The Product<br>₹{{response.TXNAMOUNT}} succesfully Transferred</h2><h4>Thank You! For Purchasing</h4></center>
+        <center><h2>You have Successfully Ordered The Product<br>₹{{response.TXNAMOUNT}} successfully Transferred</h2><h4>Thank You! For Purchasing</h4></center>
       </div>
 
 
