--- a/templates/shop/view.html
+++ b/templates/shop/view.html
@@ -34,7 +34,7 @@
 }
 </style>
                         <th><a href="/shop/productview/{{d.id}}"><img src="{{d.image.url}}" id="img"></a></th>
-                        <th><h4 id="text"><a href="/shop/productview/{{d.id}}">{{d.product_name}}</a></h4><h5 id="text">${{d.price}}</h5></th>
+                        <th><h4 id="text"><a href="/shop/productview/{{d.id}}">{{d.product_name}}</a></h4><h5 id="text">₹{{d.price}}</h5></th>
 <style>
 @media(max-width: 768px){
 #add_button {
