--- a/templates/shop/paymentstatus.html
+++ b/templates/shop/paymentstatus.html
@@ -12,7 +12,7 @@
 <body>
   
  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" width="100%">
-  <a class="navbar-brand" href="/shop" id="cart">&nbsp;My Awesome Cart</a>
+  <a class="navbar-brand" href="/shop" id="cart">&nbsp;&nbsp;My Awesome Cart</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
