--- a/templates/shop/orderrequest.html
+++ b/templates/shop/orderrequest.html
@@ -5,7 +5,7 @@
 {%if user.is_authenticated%}
 
 {% if order_request == "no" %}
-<center><img src="https://static8.depositphotos.com/1431107/919/i/600/depositphotos_9199988-stock-photo-oops-icon.jpg" width="200px" height="200px"><h3><u>You Don't recieved any Order Request</u></h3></center>
+<center><img src="https://static8.depositphotos.com/1431107/919/i/600/depositphotos_9199988-stock-photo-oops-icon.jpg" width="200px" height="200px"><h3><u>You haven't recieved any Order Request</u></h3></center>
 {% endif %}
 
 
