--- a/templates/shop/cart.html
+++ b/templates/shop/cart.html
@@ -1,8 +1,8 @@
 {% extends 'shop/basic.html' %}
+{% load custom_filter %}
 {% block title %}My Cart{% endblock %}
 {% block body %}
 {%if user.is_authenticated%}
-
 {% if cart_is == "no" %}
 <center><img src="https://static8.depositphotos.com/1431107/919/i/600/depositphotos_9199988-stock-photo-oops-icon.jpg" width="200px" height="200px"><h2><u>You have not added any product into cart</u></h2>
 <a href="/shop"><button class="btn btn-dark">Add Product</button></a></center>
@@ -50,7 +50,9 @@
 }
 </style>
                         <th><a href="/shop/productview/{{cart.product_id}}"><img src="/media/{{cart.image_p}}" id="img" ></a></th>
-                        <th><a href="/shop/productview/{{cart.product_id}}"><h4 id="text">{{cart.name_p}}</h4></a><h4 id="text">₹{{cart.price_p}}</h4><h6 id="text">Quantity:-{{cart.quantity}}</h6></th>
+
+                        <th><a href="/shop/productview/{{cart.product_id}}"><h4 id="text">{{cart.name_p}}</h4></a><h4 id="text">₹{{cart.price_p}}</h4><h6 id="text">Quantity:-{{cart.quantity}}</h6><h6>Subtotal:-₹{{cart.price_p|mul:cart.quantity}}</th>
+
                         <th><a href="cart_delete/{{cart.id}}"><button id="add_button" class="btn btn-danger">Remove</button></a></th>
                         {% endif %}
                         {% endfor %}
@@ -60,6 +62,11 @@
         </div>
     </div>
 {% endif %}
+<br>
+<div class="container">
+<h2><u>Grand Total:-₹{{grand_total}}</u></h2>
+<br>
+</div>
 {% else %}
 <center><h3>You Are Not Logined Please Login First To see Your Add To Cart Products</h3>
 <a href="/"><button class="btn btn-danger">Sign In/Sign Up</button></a></center>
