--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -27,7 +27,7 @@
 
 body {
     background-color: #fbfbfb;
-    background-image: url('https://cdn.vox-cdn.com/thumbor/75uicUdgk65_lUpNT_TdrpY9XXk=/0x0:7999x4000/1200x675/filters:focal(3361x1361:4639x2639)/cdn.vox-cdn.com/uploads/chorus_image/image/69333291/GettyImages_1043605040.0.jpg'); 
+    background-image: url('https://advendio.com/wp-content/uploads/2019/11/ecommerce-marketplace-advertising-tips.jpg'); 
 }
 .login-form {
     font-family: arial;
@@ -39,9 +39,8 @@ body {
     top: 100px;
     margin: 0 auto;
     padding: 20px 30px 20px;
-    border: 1px solid #ddd;
     border-radius: 5px;
-    background-color: #ffffff;
+    background-color: transparent;
 }
 .login-form h2 {
     text-align: center;
@@ -124,7 +123,7 @@ body {
 
 <div class="login-form">
   <form>
-    <h2><b><u>Please Login</u></b></h2>
+    <h2 style="color:black;"><b><u>Please Login</u></b></h2>
     <div class="social-btn">
 
       <a href="{% provider_login_url 'google' method='js_sdk' %} " style="text-decoration:none"><button type="button" class="twitter-btn"><i class="fa fa-google" aria-hidden="true"></i>Login with Google</button></a>
