--- a/templates/shop/prodview.html
+++ b/templates/shop/prodview.html
@@ -104,6 +104,7 @@ h3 {
 </style>
 <h4><b><u>Related Products:-</b></u></h4>
 <hr></hr>
+{{product_prod}}
     {% for prod in prod %}
     {% if prod.category == product.category and prod.product_name != product.product_name %}
     <label for="img"></label>
