--- a/templates/shop/order1.html
+++ b/templates/shop/order1.html
@@ -139,25 +139,18 @@ width:60%;
                 <input type="tel" class="form-control" id="inputPhone" placeholder="Enter Your Phone Number" name="phone">
             </div><br>
 
-            
 
 
-            <style>
-            #method{
-                width: 200px;
-            }
-            </style>
-               
-            <label for="order_method" >Choose Method of Payment</label><br>
-             <select class="form-select" aria-label="Default select example" name="order_method" id="method">
-                <option value="CARD METHOD">CARD METHOD</option>
-             </select><br>
+             <div class="form-group">
+                <label for="inputpayement" id="text">Method of Payment</label>
+                <input type="text" id="inputpayement" class="form-control" value="CASH ON DELIVERY" readonly="readonly" name="order_method">
+            </div></b><br>
 
 
 
             <div class="form-group">
-                <label for="inputorder" id="text">Your Product ID</label>
-                <input id="inputorder" class="form-control" value="{{product.id}}" readonly="readonly" name="product_id">
+                <label for="inputproductid" id="text">Your Product ID</label>
+                <input type="number" id="inputproductid" class="form-control" value="{{product.id}}" readonly="readonly" name="product_id">
             </div></b>
 
 
