--- a/templates/shop/prodview.html
+++ b/templates/shop/prodview.html
@@ -31,7 +31,25 @@
 <div class="row g-0 bg-light position-relative">
   <div class="col-md-2 mb-md-0 p-md-3">
     <img src="/media/{{product.image}}" class="w-100" alt="...">
-    <a href="/shop/order/{{product.id}}"><button class="btn btn-dark mx-3" id="butt">Buy Now</button></a>
+
+    <a href="/shop/order/{{product.id}}" class="btn btn-dark mx-3" id="butt" style="margin-left:20px;"data-toggle="modal" data-target="#myModall{{product.id}}">Buy Now</a>
+
+    <div class="modal fade" id="myModall{{product.id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" id="{{product.id}}" >
+    <div class="modal-content" >
+      <div class="modal-header">
+        <h4 class="modal-title" id="myModalLabel">Choose Payment Method</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      </div>
+      <div class="modal-footer">
+      <a href="/shop/order1/{{product.id}}"><button class="btn btn-dark">Cash on Delivery</button></a>
+      <a href="/shop/order/{{product.id}}"><button class="btn btn-dark">Online Payment(PayTm)</button></a>
+    </div>
+  </div>
+</div>
+</div>
+
+
     {% if user.is_authenticated %}
     <form method="POST" action="/shop/search/">{% csrf_token %}
     <input type="hidden" name="cart_id" value="{{request.user.id}}">
@@ -39,8 +57,8 @@
     <input type="hidden" name="name_p" value="{{product.product_name}}">
     <input type="hidden" name="price_p" value="{{product.price}}">
     <input type="hidden" name="product_id" value="{{product.id}}"><br><br>
-    <button type="button" class="btn btn-dark" style="margin-left:20px;" data-toggle="modal" data-target="#myModal{{product.id}}">Add To Cart</button>
 
+    <button type="button" class="btn btn-dark mx-3" style="margin-left:20px;" data-toggle="modal" data-target="#myModal{{product.id}}">Add To Cart</button>
 
 <div class="modal fade" id="myModal{{product.id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog" id="{{product.id}}" >
