--- a/templates/shop/moredetail.html
+++ b/templates/shop/moredetail.html
@@ -123,9 +123,9 @@
                </style>
                 <label for="order_status">Change order status:-</label><br>
                  <select class="form-select" aria-label="Default select example" name="order_status" id="order_status">
-                    <option value="Pending">Delivered</option>
+                    <option value="Delivered">Delivered</option>
                     <option value="Dispatched">Dispatched</option>
-                    <option value="Delivered">Pending</option>
+                    <option value="Pending">Pending</option>
                  </select>
                  <hr>
                  <br></b>
