basic,html template change

--- a/templates/shop/basic.html
+++ b/templates/shop/basic.html
@@ -58,6 +58,16 @@
 #navbar-brand{
   display: none;
 }
+.navbar-toggler{
+  width: 30px;
+  height: 30px;
+  margin: 13px 13px 13px 13px;
+}
+.navbar-toggler-icon{
+  width: 15px;
+  height: 15px;
+  margin: 0px 13px 8px -6px;
+}
 }
 </style>
 
