--- a/templates/shop/basic.html
+++ b/templates/shop/basic.html
@@ -53,13 +53,18 @@
   margin-left:10px;
 }
 #search{
-  width:200px;
+  width:180px;
+}
+#search_button{
+  height: 50px;
+  width: 80px;
+  font-size: 12px;
 }
 #navbar-brand{
   display: none;
 }
 .navbar-toggler{
-  width: 30px;
+  width: 25px;
   height: 30px;
   margin: 13px 13px 13px 13px;
 }
@@ -74,7 +79,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" width="100%">
     <a class="navbar-brand mx-2" href="/shop" id="navbar-brand" style="font-size:22px">My Awesome Cart</a><form class="d-flex" id="bar" method="get" action="/shop/search">
         <input class="form-control me-2" type="search" placeholder="Search Product Here" name="search" id="search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <button class="btn btn-outline-success" id="search_button" type="submit">Search</button>
       </form>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
